zbx-fargate/ecs-fargate.yml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  Zabbix ECS on Fargate

Parameters:
  ProjectName:
    Type: String
    Default: "default"
    Description: "Project(Service) name"
    MaxLength: 10
    MinLength: 2
  Env:
    Type: String
    Default: "dev"
    Description: "Environment"
    AllowedValues:
      - dev
      - stg
      - prd
  Role:
    Type: String
    Default: "zbx"
    Description: ""
  MasterUserName:
    Type: String
    Default: "admin"
    Description: "Database default user name"
  MasterUserPassword:
    Type: String
    Default: ""
    Description: "Database default user password"
    NoEcho: true
  DomainName:
    Type: String
    Default: ""
    Description: ""

Resources:
  # IAM Role
  IamRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          -
            Effect: "Allow"
            Principal:
              Service:
                - "ecs.amazonaws.com"
                - "ecs-tasks.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/AmazonECS_FullAccess"
        - "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
      Path: "/"
      RoleName: !Sub "${ProjectName}-${Env}-${Role}-iam-role"
      Tags:
        - Key: Env
          Value: !Ref Env
        - Key: Role
          Value: !Ref Role

  # Security groups
  AlbSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: !Sub "for ${Role} alb"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: 443
          ToPort: 443
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol : "-1"
          CidrIp: "0.0.0.0/0"
      VpcId: { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-vpc" }
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Env}-${Role}-alb-sg"
        - Key: Env
          Value: !Ref Env
        - Key: Role
          Value: !Ref Role

  WebSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: !Sub "for ${Role} web"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref AlbSecurityGroup
          Description: !Sub "from ${Role} alb"
      SecurityGroupEgress:
        - IpProtocol : "-1"
          CidrIp: "0.0.0.0/0"
      VpcId: { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-vpc" }
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Env}-${Role}-web-sg"
        - Key: Env
          Value: !Ref Env
        - Key: Role
          Value: !Ref Role

  SrvSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: !Sub "for ${Role} server"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: 10051
          ToPort: 10051
          CidrIp: { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-vpc-cidr" }
          Description: !Join
            - " "
            - - "from"
              - { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-vpc" }
              - "any instances"
        - IpProtocol: "tcp"
          FromPort: 10050
          ToPort: 10050
          CidrIp: { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-vpc-cidr" }
          Description: !Join
            - " "
            - - "from"
              - { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-vpc" }
              - "any instances"
      SecurityGroupEgress:
        - IpProtocol : "-1"
          CidrIp: "0.0.0.0/0"
      VpcId: { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-vpc" }
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Env}-${Role}-srv-sg"
        - Key: Env
          Value: !Ref Env
        - Key: Role
          Value: !Ref Role

  # Target Group
  AlbTargetGroup:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      Name: !Sub "${ProjectName}-${Env}-${Role}-alb-tg"
      Protocol: "HTTP"
      Port: 80
      HealthCheckProtocol: "HTTP"
      HealthCheckPort: "80"
      HealthCheckPath: "/"
      TargetType: "ip"
      VpcId: { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-vpc" }

  NlbTargetGroup:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      Name: !Sub "${ProjectName}-${Env}-${Role}-nlb-tg"
      Protocol: "TCP"
      Port: 10051
      HealthCheckProtocol: "TCP"
      TargetType: "ip"
      VpcId: { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-vpc" }

  # Listener
  AlbListener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions:
        - Type: "forward"
          TargetGroupArn: !Ref AlbTargetGroup
      LoadBalancerArn: !Ref Alb
      Protocol: "HTTPS"
      Port: 443
      Certificates:
        - CertificateArn: { "Fn::ImportValue": !Sub "${ProjectName}-certificate-arn" }

  NlbListener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions:
        - Type: "forward"
          TargetGroupArn: !Ref NlbTargetGroup
      LoadBalancerArn: !Ref Nlb
      Protocol: "TCP"
      Port: 10051

  # LoadBalancer
  Alb:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      Name: !Sub "${ProjectName}-${Env}-${Role}-pub-alb"
      Type: "application"
      Scheme: "internet-facing"
      IpAddressType: "ipv4"
      SecurityGroups:
        - !Ref AlbSecurityGroup
      Subnets:
        - { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-adm-pub-uno-subnet" }
        - { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-adm-pub-due-subnet" }

  Nlb:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      Name: !Sub "${ProjectName}-${Env}-${Role}-pub-nlb"
      Type: "network"
      Scheme: "internet-facing"
      Subnets:
        - { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-adm-pub-uno-subnet" }
        - { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-adm-pub-due-subnet" }

  # Cloudwatch LogGroup
  LogGroup:
    Type: "AWS::Logs::LogGroup"
    Properties:
      LogGroupName: !Sub "/aws/ecs/${ProjectName}-${Env}-${Role}-logs"
      RetentionInDays: 7

  # ECS Cluster
  EcsCluster:
    Type: "AWS::ECS::Cluster"
    Properties:
      ClusterName: !Sub "${ProjectName}-${Env}-${Role}-ecs-cluster"
      ClusterSettings:
        - Name: "containerInsights"
          Value: "enabled"
      Tags:
        - Key: Env
          Value: !Ref Env
        - Key: Role
          Value: !Ref Role

  # Task Definition
  SrvTask:
    Type: "AWS::ECS::TaskDefinition"
    Properties:
      Cpu: "512"
      Memory: "1024"
      ExecutionRoleArn: !GetAtt IamRole.Arn
      Family: !Sub "${Role}-server"
      NetworkMode: "awsvpc"
      RequiresCompatibilities:
        - "FARGATE"
      ContainerDefinitions:
        - Name: !Sub "${Role}-server-mysql"
          Image: "zabbix/zabbix-server-mysql:alpine-trunk"
          LogConfiguration:
            LogDriver: "awslogs"
            Options:
              awslogs-group: !Ref LogGroup
              awslogs-region: "ap-northeast-1"
              awslogs-stream-prefix: !Ref Role
          MemoryReservation: 512
          PortMappings:
            - Protocol: "tcp"
              HostPort: 10051
              ContainerPort: 10051
          Environment:
            - Name: DB_SERVER_HOST
              Value: !Join
                - ""
                - - !Ref Role
                  - "-db."
                  - !Ref DomainName
            - Name: DB_SERVER_PORT
              Value: "3306"
            - Name: MYSQL_DATABASE
              Value: "zabbix"
            - Name: MYSQL_USER
              Value: !Ref MasterUserName
            - Name: MYSQL_PASSWORD
              Value: !Ref MasterUserPassword
            - Name: ZBX_DEBUGLEVEL
              Value: "3"
        - Name: !Sub "${Role}-agent"
          Image: "zabbix/zabbix-agent:alpine-trunk"
          LogConfiguration:
            LogDriver: "awslogs"
            Options:
              awslogs-group: !Ref LogGroup
              awslogs-region: "ap-northeast-1"
              awslogs-stream-prefix: !Ref Role
          MemoryReservation: 256
          PortMappings:
            - Protocol: "tcp"
              HostPort: 10050
              ContainerPort: 10050
          Environment:
            - Name: ZBX_SERVER_HOST
              Value: 127.0.0.1
            - Name: ZBX_ACTIVESERVERS
              Value: 127.0.0.1:10050
            - Name: ZBX_HOSTNAME
              Value: Zabbix server
        # - Name: "postfix"
        #   Image: "catatnight/postfix"
        #   LogConfiguration:
        #     LogDriver: awslogs
        #     Options:
        #       awslogs-group: !Ref LogGroup
        #       awslogs-region: ap-northeast-1
        #       awslogs-stream-prefix: zabbix
        #   MemoryReservation: 256
        #   PortMappings:
        #     - Protocol: tcp
        #       HostPort: 25
        #       ContainerPort: 25
        #   Environment:
        #     - Name: maildomain
        #       Value: smtp.example.jp
        #     - Name: smtp_user
        #       Value: zbx_smtpuser:U9fixwLM

  WebTask:
    Type: "AWS::ECS::TaskDefinition"
    Properties:
      Cpu: "256"
      Memory: "512"
      ExecutionRoleArn: !GetAtt IamRole.Arn
      Family: !Sub "${Role}-web"
      NetworkMode: "awsvpc"
      RequiresCompatibilities:
        - "FARGATE"
      ContainerDefinitions:
        - Name: !Sub "${Role}-web-nginx-mysql"
          Image: zabbix/zabbix-web-nginx-mysql:alpine-trunk
          LogConfiguration:
            LogDriver: "awslogs"
            Options:
              awslogs-group: !Ref LogGroup
              awslogs-region: "ap-northeast-1"
              awslogs-stream-prefix: !Ref Role
          MemoryReservation: 512
          PortMappings:
            - Protocol: "tcp"
              HostPort: 80
              ContainerPort: 80
          Environment:
            - Name: DB_SERVER_HOST
              Value: !Join
                - ""
                - - !Ref Role
                  - "-db."
                  - !Ref DomainName
            - Name: DB_SERVER_PORT
              Value: "3306"
            - Name: MYSQL_DATABASE
              Value: "zabbix"
            - Name: MYSQL_USER
              Value: !Ref MasterUserName
            - Name: MYSQL_PASSWORD
              Value: !Ref MasterUserPassword
            - Name: PHP_TZ
              Value: Asia/Tokyo
            - Name: ZBX_SERVER_HOST
              Value: !GetAtt Nlb.DNSName
            - Name: ZBX_SERVER_NAME
              Value: !Sub "${Role}-server-mysql"
            - Name: ZBX_SERVER_PORT
              Value: "10051"

  # Service
  SrvService:
    Type: "AWS::ECS::Service"
    DependsOn: NlbListener
    Properties:
      Cluster: !Ref EcsCluster
      ServiceName: !Sub "${Role}-server-mysql"
      LaunchType: "FARGATE"
      DesiredCount: 1
      HealthCheckGracePeriodSeconds: 30
      LoadBalancers:
        - ContainerName: !Sub "${Role}-server-mysql"
          ContainerPort: 10051
          TargetGroupArn: !Ref NlbTargetGroup
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: "ENABLED"
          SecurityGroups:
            - !Ref SrvSecurityGroup
          Subnets:
            - { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-adm-pub-uno-subnet" }
            - { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-adm-pub-due-subnet" }
      TaskDefinition: !Ref SrvTask

  WebService:
    Type: "AWS::ECS::Service"
    DependsOn: AlbListener
    Properties:
      Cluster: !Ref EcsCluster
      ServiceName: !Sub "${Role}-web-nginx-mysql"
      LaunchType: "FARGATE"
      DesiredCount: 1
      HealthCheckGracePeriodSeconds: 30
      LoadBalancers:
        - ContainerName: !Sub "${Role}-web-nginx-mysql"
          ContainerPort: 80
          TargetGroupArn: !Ref AlbTargetGroup
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: "ENABLED"
          SecurityGroups:
            - !Ref WebSecurityGroup
          Subnets:
            - { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-adm-pub-uno-subnet" }
            - { "Fn::ImportValue": !Sub "${ProjectName}-${Env}-adm-pub-due-subnet" }
      TaskDefinition: !Ref WebTask

  # Set Route53 record
  AlbSetRecord:
    Type: "AWS::Route53::RecordSet"
    Properties:
      AliasTarget:
        DNSName: !GetAtt Alb.DNSName
        HostedZoneId: !GetAtt Alb.CanonicalHostedZoneID
      Comment: !Sub "for ${Role}"
      HostedZoneName: !Sub "${DomainName}."
      Name: !Sub "${Role}-web.${DomainName}"
      Type: "A"

  NlbSetRecord:
    Type: "AWS::Route53::RecordSet"
    Properties:
      AliasTarget:
        DNSName: !GetAtt Nlb.DNSName
        HostedZoneId: !GetAtt Nlb.CanonicalHostedZoneID
      Comment: !Sub "for ${Role}"
      HostedZoneName: !Sub "${DomainName}."
      Name: !Sub "${Role}-srv.${DomainName}"
      Type: "A"
